# dbgraph

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh  package.json
.github/workflows/: ci.yml  pages.yml  postgres-integration.yml  release.yml
crates/dbgraph-cli/: Cargo.toml
crates/dbgraph-cli/src/: args.rs  main.rs
crates/dbgraph-cli/src/commands/: analyze.rs  benchmark_agent.rs  common.rs  doctor.rs  init.rs  inspect.rs  install.rs  snapshot.rs
crates/dbgraph-core/: Cargo.toml
crates/dbgraph-core/src/: config.rs  data_access.rs  lib.rs  model.rs  project.rs  sampling.rs  semantics.rs  snapshot.rs
crates/dbgraph-graph/: Cargo.toml
crates/dbgraph-graph/src/: analysis.rs  context.rs  lib.rs
crates/dbgraph-graph/src/analysis/: data_profile.rs  findings.rs  mod.rs  sections.rs
crates/dbgraph-installer/: Cargo.toml
crates/dbgraph-installer/src/: lib.rs
crates/dbgraph-mcp/: Cargo.toml
crates/dbgraph-mcp/src/: lib.rs
crates/dbgraph-provider/: Cargo.toml
crates/dbgraph-provider/src/: lib.rs  sampling_support.rs  sqlite.rs
crates/dbgraph-provider/src/postgres/: mod.rs  sampling.rs
crates/dbgraph-provider/src/sqlite/: sampling.rs
crates/dbgraph-sql/: Cargo.toml
crates/dbgraph-sql/src/: lib.rs
crates/dbgraph-storage/: Cargo.toml
crates/dbgraph-storage/src/: lib.rs
docs/: agent-benchmark.md  configuration.md  provider-capabilities.md  quickstart.md  release-matrix.md  security.md  usage.md  usage.zh-CN.md
docs/superpowers/plans/: 2026-05-28-phase-03-postgres-provider.md
docs/superpowers/specs/: 2026-05-28-cli-provider-optimization-design.md
examples/postgres-teashop/: README.md  schema.sql
scripts/integration/: postgres-smoke.ps1
site/: astro.config.mjs  index.html  package-lock.json  package.json  styles.css
site/docs/: configuration.html  providers.html  quickstart.html  release-matrix.html  security.html  usage-zh.html  usage.html
site/src/content/docs/: agent-benchmark.md  configuration.md  index.mdx  providers.md  quickstart.md  release-matrix.md  security.md  usage.md
site/src/content/docs/zh/: index.mdx  usage.md
site/src/styles/: custom.css
