[workspace]
members = [
    "crates/dbgraph-cli",
    "crates/dbgraph-core",
    "crates/dbgraph-storage",
    "crates/dbgraph-graph",
    "crates/dbgraph-provider",
    "crates/dbgraph-sql",
    "crates/dbgraph-mcp",
    "crates/dbgraph-installer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/dbgraph/dbgraph"
rust-version = "1.80"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
