[package]
name = "dbgraph-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "dbgraph"
path = "src/main.rs"

[dependencies]
dbgraph-core = { path = "../dbgraph-core" }
tracing = "0.1.41"

[lints]
workspace = true
