[package]
name = "dbgraph-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dbgraph-core = { path = "../dbgraph-core" }
dbgraph-storage = { path = "../dbgraph-storage" }

[lints]
workspace = true
