[package]
name = "dbgraph-sql"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dbgraph-core = { path = "../dbgraph-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlparser = "0.59.0"
walkdir = "2.5.0"
globset = "0.4.16"

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
